# json-optics-playground

./: Comparison.md  README.md  json-optics-practice.cabal
app/: Main.hs
nix/: extra-deps.nix  packages.nix  release.nix
src/: JsonOpticsPractice.hs
src/JsonOpticsPractice/: GeneralizingTraversals.hs  GeneralizingTraversalsLens.hs  GeocodeCity.hs  Horoscope.hs
