cabal-version:      2.4
name:               json-optics-practice
version:            0.1.0.0

synopsis: JSON + Optics
description: See README at <https://github.com/lfborjas/json-optics-practice>


license-file: LICENSE

author:             Luis Borjas Reyes
maintainer:         hello@lfborjas.com
bug-reports: https://github.com/lfborjas/json-optics-practice/issues


extra-source-files: 
LICENSE

    README.md

source-repository head
    type: git
    location: https://github.com/lfborjas/json-optics-practice


-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        DeriveGeneric
        DataKinds
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
        TypeOperators
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      JsonOpticsPractice 
    build-depends:    
      base >= 4.13 && <= 4.17
      , containers
      , time
      , bytestring
      , text
      , optics
      , aeson
      , aeson-optics
      , http-client
      , http-client-tls
      , http-types
      , mtl
      
      

    hs-source-dirs:   src

executable json-optics-practice-exe
    main-is: Main.hs
    build-depends:
      base
      , json-optics-practice
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

